--- a/scripts/PEP Validating Wind Sensors.ipynb
+++ b/scripts/PEP Validating Wind Sensors.ipynb
@@ -759,9 +759,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pep2024",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "pep2024"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
